--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="header-main">
             <div class="logo">
-                <a href="/index.html"><img src="/images/logo.png" alt="나로비치호텔">
+                <a href="/index.html"><img src="images/logo.png" alt="나로비치호텔">
                     <p>naro beach hotel</p>
                 </a>
             </div>
@@ -75,7 +75,7 @@
                 <li class="room-search">
                     <a href="javascript:;">
                         <p>RoomType<br><span>객실선택</span></p>
-                        <img src="/images/bottom-arrow.png" alt="화살표">
+                        <img src="images/bottom-arrow.png" alt="화살표">
                     </a>
                     <div id="room-wrap">
                         <ul class="room-box">
@@ -106,31 +106,31 @@
                 <li>
                     <a href="javascript:;">
                         <p>Check in<br><span>선택</span></p>
-                        <img src="/images/bottom-arrow.png" alt="화살표">
+                        <img src="images/bottom-arrow.png" alt="화살표">
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;">
                         <p>Check Out<br><span>선택</span></p>
-                        <img src="/images/bottom-arrow.png" alt="화살표">
+                        <img src="images/bottom-arrow.png" alt="화살표">
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;">
                         <p>Adults<br><span>선택</span></p>
-                        <img src="/images/bottom-arrow.png" alt="화살표">
+                        <img src="images/bottom-arrow.png" alt="화살표">
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;">
                         <p>Youth<br><span>선택</span></p>
-                        <img src="/images/bottom-arrow.png" alt="화살표">
+                        <img src="images/bottom-arrow.png" alt="화살표">
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;">
                         <p>minor<br><span>선택</span></p>
-                        <img src="/images/bottom-arrow.png" alt="화살표">
+                        <img src="images/bottom-arrow.png" alt="화살표">
                     </a>
                 </li>
                 <li>
@@ -197,11 +197,11 @@
         <article id="main-tour">
             <h2>Tourist Facility</h2>
             <div id="tour-wrap">
-                <div class="prev"><img src="/images/tour-arrow1.png" alt="arrow"></div>
-                <div class="next"><img src="/images/tour-arrow2.png" alt="arrow"></div>
+                <div class="prev"><img src="images/tour-arrow1.png" alt="arrow"></div>
+                <div class="next"><img src="images/tour-arrow2.png" alt="arrow"></div>
                 <div class="item-wrap">
                     <div class="tour-item">
-                        <img src="/images/tour-banner.jpg" alt="청소년 우주 체험센터">
+                        <img src="images/tour-banner.jpg" alt="청소년 우주 체험센터">
                         <ul class="tour-item-wrap">
                             <li class="tour-infor">
                                 <h3>청소년 우주 체험센터</h3>
@@ -226,7 +226,7 @@
                         </ul>
                     </div>
                     <div class="tour-item">
-                        <img src="/images/tour-banner2.png" alt="천문 과학관">
+                        <img src="images/tour-banner2.png" alt="천문 과학관">
                         <ul class="tour-item-wrap">
                             <li class="tour-infor">
                                 <h3>천문 과학관</h3>
@@ -250,7 +250,7 @@
                         </ul>
                     </div>
                     <div class="tour-item">
-                        <img src="/images/tour-banner3.jpg" alt="염포해수욕장">
+                        <img src="images/tour-banner3.jpg" alt="염포해수욕장">
                         <ul class="tour-item-wrap">
                             <li class="tour-infor">
                                 <h3>염포해수욕장</h3>
@@ -281,8 +281,8 @@
         <article id="event">
             <h2>EVENT</h2>
             <div class="event-wrap">
-                <div class="e-prev"><a href="#"><img src="/images/tour-arrow1.png" alt="arrow"></a></div>
-                <div class="e-next"><a href="#"><img src="/images/tour-arrow2.png" alt="arrow"></a></div>
+                <div class="e-prev"><a href="#"><img src="images/tour-arrow1.png" alt="arrow"></a></div>
+                <div class="e-next"><a href="#"><img src="images/tour-arrow2.png" alt="arrow"></a></div>
                 <div class="event-banner-wrap">
                     <ul class="event-banner">
                         <li><a href="javascript:;"><img src="https://picsum.photos/id/27/300/300" alt="image"></a></li>
@@ -306,7 +306,7 @@
                 <p>COPYRIGHT (C) 2022 NARO BEACH HOTEL. ALL RIGHTS RESTEVED.</p>
             </div>
             <ul class="footer-logo">
-                <li><img src="/images/logo.png" alt="로고"></li>
+                <li><img src="images/logo.png" alt="로고"></li>
                 <li class="footer-infor">
                     <p><span class="infor1">(주) 나로씨티</span></p>
                     <p><span class="infor2">NARO CITY</span></p>
